force-app/main/default/objects/MAINTENANCE_REPAIR__c/MAINTENANCE_REPAIR__c.object-meta.xml
<CustomObject>
    <label>メンテナンス・修理</label>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>MAINTENANCE &amp; REPAIR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>