force-app/main/default/objects/MAINTENANCE_REPAIR__c/fields/ContainerInTransportation__c.field-meta.xml
<CustomField>
    <fullName>ContainerInTransportation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container in Transportation</label>
    <referenceTo>Container_Info__c</referenceTo>
    <relationshipLabel>RAM</relationshipLabel>
    <relationshipName>RAM</relationshipName>
    <type>Lookup</type>
</CustomField>