force-app/main/default/objects/MAINTENANCE_REPAIR__c/fields/ContainerInWHSDepotYard__c.field-meta.xml
<CustomField>
    <fullName>ContainerInWHSDepotYard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container in Warehouse, Depot, Yard</label>
    <referenceTo>CONTAINER__c</referenceTo>
    <relationshipLabel>RAM</relationshipLabel>
    <relationshipName>RAM</relationshipName>
    <type>Lookup</type>
</CustomField>