force-app/main/default/objects/MAINTENANCE_REPAIR__c/fields/DATE_OF_REPAIR__c.field-meta.xml
<CustomField>
    <fullName>DATE_OF_REPAIR__c</fullName>
    <label>DATE OF REPAIR</label>
    <type>Date</type>
</CustomField>