force-app/main/default/objects/MAINTENANCE_REPAIR__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>RAM</relationshipLabel>
    <relationshipName>RAM</relationshipName>
    <type>Lookup</type>
</CustomField>