force-app/main/default/objects/MAINTENANCE_REPAIR__c/fields/P_I_C_OF_REPAIR_FACTORY__c.field-meta.xml
<CustomField>
    <fullName>P_I_C_OF_REPAIR_FACTORY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C OF REPAIR FACTORY</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>MAINTENANCE_REPAIR</relationshipName>
    <type>Lookup</type>
</CustomField>