force-app/main/default/objects/MAINTENANCE_REPAIR__c/fields/RAMStatus__c.field-meta.xml
<CustomField>
    <fullName>RAMStatus__c</fullName>
    <label>RAM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RepairMaintenanceStatus</valueSetName>
    </valueSet>
</CustomField>