force-app/main/default/objects/MAINTENANCE_REPAIR__c/fields/REPAIR_FACTORY__c.field-meta.xml
<CustomField>
    <fullName>REPAIR_FACTORY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REPAIR FACTORY</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MAINTENANCE_REPAIR</relationshipName>
    <type>Lookup</type>
</CustomField>