force-app/main/default/objects/MAINTENANCE_REPAIR__c/fields/RepairMaintenanceCategory__c.field-meta.xml
<CustomField>
    <fullName>RepairMaintenanceCategory__c</fullName>
    <label>REPAIR &amp; MAINTENANCE CATEGORY</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RepairMaintenanceCategory</valueSetName>
    </valueSet>
</CustomField>