force-app/main/default/objects/MAINTENANCE_REPAIR__c/fields/TRUCK_FLEET__c.field-meta.xml
<CustomField>
    <fullName>TRUCK_FLEET__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRUCK &amp; FLEET</label>
    <referenceTo>TruckFleet__c</referenceTo>
    <relationshipName>MAINTENANCE_REPAIR</relationshipName>
    <type>Lookup</type>
</CustomField>