force-app/main/default/objects/MAINTENANCE_REPAIR__c/fields/TYPE_OF_REPAIR__c.field-meta.xml
<CustomField>
    <fullName>TYPE_OF_REPAIR__c</fullName>
    <label>TYPE OF REPAIR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change tire</fullName>
            </value>
            <value>
                <fullName>Engine cleaning</fullName>
            </value>
            <value>
                <fullName>Shassi fixing</fullName>
            </value>
            <value>
                <fullName>Refill oil/replace oil</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>