force-app/main/default/objects/MAINTENANCE_REPAIR__c/fields/TYPE_REASON__c.field-meta.xml
<CustomField>
    <fullName>TYPE_REASON__c</fullName>
    <label>TYPE OF REPAIR REASON</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled maintenance</fullName>
            </value>
            <value>
                <fullName>Machine trouble</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>