force-app/main/default/objects/MAINTENANCE_REPAIR__c/recordTypes/ContainerInTransportation.recordType-meta.xml
<RecordType>
    <fullName>ContainerInTransportation</fullName>
    <active>true</active>
    <label>Container in Transportation</label>
</RecordType>