force-app/main/default/objects/MAINTENANCE_REPAIR__c/recordTypes/ContainerInWHSDepotYard.recordType-meta.xml
<RecordType>
    <fullName>ContainerInWHSDepotYard</fullName>
    <active>true</active>
    <label>Container in WHS, Depot, Yard</label>
</RecordType>