force-app/main/default/objects/MAINTENANCE_REPAIR__c/recordTypes/TruckFleet.recordType-meta.xml
<RecordType>
    <fullName>TruckFleet</fullName>
    <active>true</active>
    <label>Truck &amp; Fleet</label>
</RecordType>